feat: show recent sentence practice on Progress
